# B2B-SaaS-Renewal-negotiator

./: .gitignore  README.md  demo.py  pyproject.toml
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: NegotiationCard.jsx  OutcomeBadge.jsx  SummaryPanel.jsx  TranscriptFeed.jsx
frontend/src/hooks/: useNegotiationStream.js
src/: api.py  models.py  orchestrator.py
src/a2a/: types.py
src/agents/: procurement.py  vendor.py
