[project]
name = "b2b-renewal-negotiator"
version = "0.1.0"
description = "A2A agent-to-agent B2B SaaS renewal negotiator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.scripts]
demo = "demo:main"
